More work on the prices screen
